package Lógica.Interfaces;

import Lógica.Entidades.Posición;

public interface Movimiento {
  void mover(Posición posiciónActual, int velocidad);
}
