package Presentación.Enumeraciones;

public enum AcciónUsuario {
  ARRIBA,
  ABAJO,
  DERECHA,
  IZQUIERDA,
  DISPARAR,
  CONFIRMAR,
  PAUSA
}
